tests/internal/cpp/negative_case/bad_consteval_divide_by_zero.cpp
// Negative test: divide-by-zero inside a consteval function must fail constant evaluation.

consteval int explode() {
  return 1 / 0;
}

int main() {
  return explode();
}
